--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "matthiasmullie/minify": "^1.3",
         "open-admin-org/open-admin": "^1.0"
     },
     "require-dev": {
