--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "matthiasmullie/minify": "^1.3",
+        "open-admin-ext/ckeditor": "^1.0",
         "open-admin-org/open-admin": "^1.0"
     },
     "require-dev": {
