--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "open-admin-ext/ckeditor": "^1.0",
         "open-admin-ext/page-designer": "^1.0",
         "open-admin-org/open-admin": "^1.0",
-        "riari/laravel-forum": "^5.6"
+        "riari/laravel-forum": "^5.6",
+        "twbs/bootstrap-icons": "^1.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
