--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "open-admin-ext/media-manager": "^1.0",
         "open-admin-org/open-admin": "^1.0",
         "riari/laravel-forum": "^5.6",
+        "stripe/stripe-php": "^14.5",
         "twbs/bootstrap-icons": "^1.11"
     },
     "require-dev": {
